public/stylesheets/main.css
/* ... */
@media (min-width: 992px) and (max-width: 1199px) {
  .hidden-md {
    display: none !important; } }

@media (min-width: 1200px) {
  .hidden-lg {
    display: none !important; } }

.visible-print {
  display: none !important; }

@media print {
  .visible-print {
    display: block !important; }
  table.visible-print {
    display: table !important; }
  tr.visible-print {
    display: table-row !important; }
  th.visible-print,
  td.visible-print {
    display: table-cell !important; } }

.visible-print-block {
  display: none !important; }
  @media print {
    .visible-print-block {
      display: block !important; } }

.visible-print-inline {
  display: none !important; }
  @media print {
    .visible-print-inline {
      display: inline !important; } }

.visible-print-inline-block {
  display: none !important; }
  @media print {
    .visible-print-inline-block {
      display: inline-block !important; } }

@media print {
  .hidden-print {
    display: none !important; } }

main {
  margin-top: 35px;
  margin-bottom: 20px; }

article {
  margin-top: 10px; }

aside {
  margin-top: 10px; }
  aside h4 {
    font-style: italic;
    text-align: center;
    line-height: 50px; }
  aside .list-group-item {
    border: none;
    background: none; }
  aside a {
    color: #141514; }
    aside a:hover {
      text-decoration: underline; }

.navbar {
  height: 50px;
  box-shadow: 0px 1px 4px #393c39; }

.org-name img {
  height: 50px;
  padding: 0px; }

.org-name span {
  color: white;
  padding-left: 7.5px;
  text-decoration: none; }

@media (max-width: 480px) {
  .org-name span {
    display: none; } }

.navbar-collapse, .navbar-toggle {
  color: white;
  margin: 0px;
  height: 50px;
  border-radius: 0px; }

.navbar-nav {
  display: inline-block;
  float: none;
  vertical-align: top; }

.navbar-collapse {
  text-align: center;
  background-color: #16324f; }

footer {
  background-color: #16324f;
  color: white; }
  footer h4 {
    margin: 30px 0;
    font-style: italic; }
    footer h4 a {
      color: white; }
  footer section {
    padding: 20px; }
  footer a {
    color: white; }
  footer a:hover {
    color: white; }
  footer h3 {
    margin-top: 0px; }

.copyright {
  padding: 30px 15px 0px; }

#home {
  margin-top: 20px;
  margin-bottom: 0px; }

.home-head {
  background-image: url(../images/homepage/CollageGrey.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 500px;
  margin-top: -20px;
  color: #FFFFFF; }
  .home-head .container {
    padding-top: 100px; }
  .home-head h1 {
    font-size: 72px;
    font-weight: 800;
    line-height: 144px;
    margin-bottom: 1em; }
    .home-head h1 span {
      padding: 0.15em;
      background-color: #08a386;
      box-decoration-break: clone;
      -webkit-box-decoration-break: clone; }
  .home-head p {
    font-style: italic; }
    .home-head p span {
      padding: 0.33em 0.5em;
      background-color: #16324f;
      line-height: 3em;
      box-decoration-break: clone;
      -webkit-box-decoration-break: clone; }

.white-background {
  font-size: 1.5em;
  text-align: center; }
  .white-background h2 {
    font-size: 2.5em;
    line-height: 2em; }
  .white-background a {
    font-style: italic; }
  @media (max-width: 768px) {
    .white-background {
      font-size: 1.11em;
      padding-left: 15%;
      padding-right: 15%; }
      .white-background h2 {
        font-size: 2em; } }

section {
  padding: 5% 0%; }

.background-image {
  background-attachment: fixed;
  background-position: center;
  background-size: 100%; }
  .background-image section {
    color: #FFFFFF;
    font-size: 1.5em;
    text-align: center; }
    .background-image section a {
      font-style: normal; }
    @media (max-width: 768px) {
      .background-image section {
        font-size: 1.1em;
        padding-left: 15%;
        padding-right: 15%; } }

#building {
  background-image: url(/images/homepage/building.JPG); }

#listening {
  background-image: url(/images/homepage/listening.JPG); }

#three {
  background-image: url(/images/homepage/drinking.JPG); }

#christmas {
  background-image: url(/images/homepage/christmas.JPG); }

.references {
  font-size: 16px;
  font-style: italic;
  text-align: right; }

header {
  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: uppercase; }

h4, h5, h6 {
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif; }

audio {
  width: 100%; }

.panel-heading {
  font-size: 0.75em; }

.sermon-details {
  width: 119.047619%;
  margin-left: -9.5238095%;
  margin-top: 0;
  margin-bottom: 25px;
  padding: 30px 8%;
  background-color: #08a386;
  color: white;
  font-size: 20px; }
  .sermon-details a {
    color: inherit; }

.sermon-headings {
  padding-top: 5px; }
  .sermon-headings > ol > li, .sermon-headings > ul > li {
    padding-top: 20px; }

.form-narrow {
  width: 80%; }

.form-control.h1 {
  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
  height: 60px;
  font-size: 40px;
  line-height: 1.1;
  color: #141514; }

.flexible-map-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 50px;
  margin-top: 30px;
  margin-bottom: 30px;
  height: 0;
  width: 119.047619%;
  margin-left: -9.5238095%;
  overflow: hidden; }

.flexible-map-container iframe,
.flexible-map-container object,
.flexible-map-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%; }

.card {
  background-color: white;
  box-shadow: 0px 0px 1px #919791;
  padding: 0% 8% 8% 8%; }
  .card .header-container {
    width: 119.047619%;
    margin-left: -9.5238095%;
    margin-top: 0;
    margin-bottom: 25px;
    padding: 30px 8%;
    background-color: #16324f;
    background-size: cover;
    background-position: 50%; }
/* ... */

